TAS-220-change lat,long to query parameter
